--- a/about.html
+++ b/about.html
@@ -44,13 +44,36 @@
             filter: drop-shadow(10px 20px 1px rgba(0, 0, 0, 0.199));
             transform: translateY(-8px) scale(1.01);
         }
+
+        .warn {
+            height: 100%;
+            display: none;
+            position: relative;
+            color: black;
+            z-index: 10;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        @media screen and (max-width: 1400px) {
+            main {
+                display: none;
+                animation: pagetransition .48s ease;
+            }
+
+            .warn {
+                display: flex;
+                animation: pagetransition .48s ease;
+            }
+        }
     </style>
 </head>
 
 <!-- <img src="https://i.ibb.co.com/Mx9zmLLL/Gambar-Whats-App-2025-10-21-pukul-21-06-17-a02718de.jpg" alt="Gambar-Whats-App-2025-10-21-pukul-21-06-17-a02718de" border="0"> -->
-
-<body style="max-height: 1000px;overflow: hidden;background: linear-gradient(70deg, #2b7ffc,#81aef8);">
-    <div class="container-fluid w-100">
+<main>
+    <body style="max-height: 1000px;overflow: hidden;background: linear-gradient(70deg, #2b7ffc,#81aef8);">
+        <div class="container-fluid w-100">
         <div class="d-flex align-items-center">
             <nav class="navbar navbar-expand-lg bg-tertiary w-100 rounded-2">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -96,6 +119,12 @@
     </center>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+</main>
+    <div class="warn">
+    <h1>Kami mohon maaf!</h1>
+    <h4>Layar kamu terlalu kecil untuk menampilkan website ini</h4>
+    <h4>Silahkan coba untuk membuka website dengan laya yang lebih lebar!</h4>
+</div>
 </body>
 
 </html>
