--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <style>
         body {
+            height: 100vh;
             animation: pagetransition .48s ease;
         }
 
@@ -32,9 +33,33 @@
         #search:hover {
             background-color: white;
         }
+
+        .warn {
+            height: 100%;
+            display: none;
+            position: relative;
+            color: black;
+            z-index: 10;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        @media screen and (max-width: 1400px) {
+            main {
+                display: none;
+                animation: pagetransition .48s ease;
+            }
+
+            .warn {
+                display: flex;
+                animation: pagetransition .48s ease;
+            }
+        }
     </style>
 </head>
 
+<main>
 <body style="max-height: 1000px;overflow: hidden;background: linear-gradient(290deg, #2b7ffc,#81aef8);">
     <div class="container-fluid w-100">
         <div class="d-flex align-items-center">
@@ -107,7 +132,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
-</body>
 
+    </main>
+    <div class="warn">
+    <h1>Kami mohon maaf!</h1>
+    <h4>Layar kamu terlalu kecil untuk menampilkan website ini</h4>
+    <h4>Silahkan coba untuk membuka website dengan layar yang lebih lebar!</h4>
+</div>
+    </body>
 
 </html>
