add margin and cente text in warn.html

--- a/about.html
+++ b/about.html
@@ -54,6 +54,8 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            text-align: center;
+            margin: 30px;
         }
 
         @media screen and (max-width: 1400px) {
@@ -126,5 +128,6 @@
     <h4>Silahkan coba untuk membuka website dengan laya yang lebih lebar!</h4>
 </div>
 </body>
+
 
 </html>
