Fix HTML formatting and improve responsiveness

--- a/home.html
+++ b/home.html
@@ -43,6 +43,8 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            text-align: center;
+            margin: 30px;
         }
 
         @media screen and (max-width: 1400px) {
@@ -140,5 +142,6 @@
     <h4>Silahkan coba untuk membuka website dengan layar yang lebih lebar!</h4>
 </div>
     </body>
+
 
 </html>
