--- a/room.html
+++ b/room.html
@@ -54,6 +54,8 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            text-align: center;
+            margin: 30px;
         }
 
         @media screen and (max-width: 1400px) {
@@ -255,5 +257,6 @@
     <h4>Silahkan coba untuk membuka website dengan layar yang lebih lebar!</h4>
 </div>
 </body>
+
 
 </html>
