--- a/home.html
+++ b/home.html
@@ -56,6 +56,7 @@
             .warn {
                 display: flex;
                 animation: pagetransition .48s ease;
+            
             }
         }
     </style>
@@ -102,7 +103,7 @@
         <div class="container">
             <div class="row">
                 <h1 class="text-wrap" style="font-size: 6rem;"><strong>Selamat datang<br> di Wangyo</strong></h1>
-                <h4 style="font-size: 2.8rem;">Dimana anda dapat<br> menyewa ruangan stembayo</h4>
+                <h4 style="font-size: 2.8rem;margin-top: 30px;">Dimana anda dapat<br> menyewa ruangan stembayo</h4>
             </div>
             <div class="row">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 1320"
@@ -142,6 +143,5 @@
     <h4>Silahkan coba untuk membuka website dengan layar yang lebih lebar!</h4>
 </div>
     </body>
-
 
 </html>
