--- a/about.html
+++ b/about.html
@@ -33,14 +33,14 @@
             background-color: white;
         }
 
-        .kartu{
+        .kartu {
             width: 23%;
             height: 35rem;
-            background: linear-gradient(170deg, #fff,#ffebeb53);
+            background: linear-gradient(170deg, #fff, #ffebeb53);
             transition: .23s ease;
         }
-        
-        .kartu:hover{
+
+        .kartu:hover {
             filter: drop-shadow(10px 20px 1px rgba(0, 0, 0, 0.199));
             transform: translateY(-8px) scale(1.01);
         }
@@ -74,55 +74,68 @@
 
 <!-- <img src="https://i.ibb.co.com/Mx9zmLLL/Gambar-Whats-App-2025-10-21-pukul-21-06-17-a02718de.jpg" alt="Gambar-Whats-App-2025-10-21-pukul-21-06-17-a02718de" border="0"> -->
 <main>
+
     <body style="max-height: 1000px;overflow: hidden;background: linear-gradient(70deg, #2b7ffc,#81aef8);">
         <div class="container-fluid w-100">
-        <div class="d-flex align-items-center">
-            <nav class="navbar navbar-expand-lg bg-tertiary w-100 rounded-2">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <img src="https://i.ibb.co.com/gLxHy74b/stembayo-bg.png" alt="stembayo-bg" border="0" width="60px">
-                <a class="navbar-brand fs-1 fw-bold m-2" href="#">Wangyo</a>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="home.html">Beranda</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="room.html">Ruangan</a>
-                        </li>
-                        <li class="nav-item fw-bold bg bg-secondary rounded-3">
-                            <a class="nav-link active text-light" aria-current="page" href="about.html">Tentang</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search" data-bs-theme="light">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                        <button id="search" class="btn btn-outline-light" type="submit">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-search" viewBox="0 0 16 16">
-                                <path
-                                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
-                            </svg></button>
-                    </form>
-                </div>
-            </nav>
+            <div class="d-flex align-items-center">
+                <nav class="navbar navbar-expand-lg bg-tertiary w-100 rounded-2" style="height: 102px;">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <img src="https://i.ibb.co.com/xqZBcdV8/Untitled66-20251026203112.png" alt="stembayo-bg" border="0"
+                        width="230px">
+                    <!-- <a class="navbar-brand fs-1 fw-bold m-2" href="#">Wangyo</a> -->
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" href="home.html">Beranda</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="room.html">Ruangan</a>
+                            </li>
+                            <li class="nav-item fw-bold bg bg-secondary rounded-3">
+                                <a class="nav-link active text-light" aria-current="page" href="about.html">Tentang</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex" role="search" data-bs-theme="light">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                            <button id="search" class="btn btn-outline-light" type="submit">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-search" viewBox="0 0 16 16">
+                                    <path
+                                        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+                                </svg></button>
+                        </form>
+                    </div>
+                </nav>
+            </div>
         </div>
-    </div>
 
-    <center class="d-flex align-items-center justify-content-center" style="height: 90%;">
-        <div class="container m-4">
-            <div class="row d-flex justify-content-center">
-                <div class="card p-2 m-1 kartu">
-                    yapping + kredit disini ya wok
+        <center class="d-flex align-items-center justify-content-center" style="height: 90vh;">
+            <div class="container m-4">
+                <div class="row d-flex justify-content-center">
+                    <div class="card p-2 m-1 kartu w-50 d-flex align-items-center justify-content-center" style="height: 50vh;">
+                        <img src="https://i.ibb.co.com/xqZBcdV8/Untitled66-20251026203112.png" alt="wangyo" border="0" width="230px" class="m-3 mb-5">
+                        Wangyo adalah tempat terbaik untuk menyewa ruangan di STEMBAYO. <br>
+                        Disini anda dapat membuat reservasi dengan sangat mudah, efisien, dan fleksibel. <br> <br>
+
+                        <strong>Team Wangyo <br></strong>
+                        Ian: Code Writer, Website Designer <br>
+                        Noel: Logo Designer, Concept Idea, Researcher <br>
+                        Elvira: Presentation Maker, Explanation Writer, Team Supporter <br>
+                        Dzaky: Concept Idea<br><br>
+                        <p>&#169; 2025 Wangyo</p>
                     </div>
                 </div>
-    </center>
+        </center>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+            crossorigin="anonymous"></script>
 </main>
-    <div class="warn">
+<div class="warn">
     <h1>Kami mohon maaf!</h1>
     <h4>Layar kamu terlalu kecil untuk menampilkan website ini</h4>
     <h4>Silahkan coba untuk membuka website dengan laya yang lebih lebar!</h4>
